# smartfamilytravelscout

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  IMPLEMENTATION_SPEC.md  PR_BODY.md  PR_DESCRIPTION.md  PR_TEMPLATE.md  README.md  README_TOURISM_SCRAPERS.md  SECURITY.md  alembic.ini  demo_parent_escape.py  docker-compose.yml  entrypoint.sh  initial.doc  pr_description.md  pyproject.toml  setup.sh  test_email_templates.py  test_exceptions.py
alembic/: env.py
alembic/versions/: 2025_11_16_0805-001_initial_schema_with_all_tables.py  2025_11_16_1200-002_add_api_cost_tracking.py  2025_11_20_2259-a085810eaf1d_add_is_origin_and_is_destination_to_.py  2025_11_21_0000-003_add_email_notification_support.py  2025_11_21_2219-2924c2c01a59_add_model_pricing_table.py  2025_11_21_2221-9b2c6de58e84_add_composite_indexes_for_performance.py  2025_11_21_2230-003_add_accommodation_scoring.py  2025_11_21_2230-003_add_event_deduplication_fields.py  2025_11_21_2230-003_change_airport_fk_cascade_to_restrict.py  2025_11_21_2234-add_ourairports_fields_to_airports.py
app/: __init__.py  config.py  database.py  exceptions.py
app/ai/: __init__.py  accommodation_scorer.py  claude_client.py  deal_scorer.py  event_scorer.py  itinerary_generator.py  parent_escape_analyzer.py  prompt_loader.py
app/api/: main.py
app/cli/: main.py  validators.py
app/models/: __init__.py  airport.py  (+12 more)
deployment/: logrotate.conf
docs/: API_VERSIONING.md  CLAUDE_INTEGRATION.md  CLI.md  CLI_QUICK_REFERENCE.md  DATABASE_BACKUP.md  DATABASE_QUERIES.md  DATABASE_SCHEMA.md  ITINERARY_GENERATOR.md  PROGRESS_INDICATORS.md  SKYSCANNER_SCRAPER.md  WEBSOCKET_REALTIME_UPDATES.md  accommodation_matcher.md  airbnb_scraper_usage.md  booking_scraper_guide.md  logging.md  ryanair_scraper.md  true_cost_calculator.md
examples/: accommodation_matcher_example.py  accommodation_scorer_example.py  booking_scraper_example.py  claude_integration_example.py  deal_scorer_example.py  email_integration.py  eventbrite_example.py  flight_orchestrator_example.py  itinerary_generator_example.py  preference_scoring_example.py  ryanair_scraper_example.py  scrape_tourism_events.py  skyscanner_example.py  websocket_client_example.py  websocket_html_example.html  wizzair_scraper_example.py
templates/: base.html  dashboard.html  deal_details.html  deals.html  error.html  preferences.html  stats.html
tests/: conftest.py  test_parent_escape_analyzer.py
(+139 files in other folders)
