[tool.poetry]
name = "smartfamilytravelscout"
version = "0.1.0"
description = "AI-powered family travel deal finder"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
celery = "^5.3.6"
redis = "^5.0.1"
playwright = "^1.41.0"
anthropic = "^0.18.0"
pandas = "^2.2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
typer = {extras = ["all"], version = "^0.9.0"}
jinja2 = "^3.1.3"
rich = "^13.7.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
httpx = "^0.26.0"
aiohttp = "^3.9.0"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
lxml = "^5.1.0"
python-dateutil = "^2.8.2"
pytz = "^2024.1"
schedule = "^1.2.1"
tenacity = "^8.2.3"
apify-client = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
ipython = "^8.21.0"
httpx = "^0.26.0"

[tool.poetry.scripts]
travelscout = "app.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (integration tests with real browser)",
    "unit: marks tests as unit tests (fast, mocked)",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
